@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 #
-# Copyright CEA/DAM/DIF (2010)
+# Copyright CEA/DAM/DIF (2010, 2011)
 #  Contributor: Stephane THIELL <stephane.thiell@cea.fr>
 #
 # This file is part of the ClusterShell library.
@@ -34,7 +34,7 @@
 # $Id$
 
 """
-format clush/dsh/pdsh-like output for humans
+format dsh/pdsh-like output for humans and more
 
 For help, type::
     $ clubak --help
@@ -44,29 +44,55 @@ from itertools import imap
 import sys
 
 from ClusterShell.MsgTree import MsgTree
+from ClusterShell.NodeSet import STD_GROUP_RESOLVER
 
-from ClusterShell.CLI.Display import Display, WHENCOLOR_CHOICES
+from ClusterShell.CLI.Display import Display
 from ClusterShell.CLI.Error import GENERIC_ERRORS, handle_generic_error
 from ClusterShell.CLI.OptionParser import OptionParser
 from ClusterShell.CLI.Utils import NodeSet, nodeset_cmp
 
 
-def display(tree, disp, gather):
+def display_tree(tree, disp, out):
+    """display sub-routine for clubak -T (msgtree trace mode)"""
+    togh = True
+    offset = 2
+    reldepth = -offset
+    reldepths = {}
+    line_mode = disp.line_mode
+    for msgline, keys, depth, nchildren in tree.walk_trace():
+        if togh:
+            if depth in reldepths:
+                reldepth = reldepths[depth]
+            else:
+                reldepth = reldepths[depth] = reldepth + offset
+            if line_mode:
+                out.write("%s:\n" % NodeSet.fromlist(keys))
+            else:
+                out.write("%s\n" % \
+                    (disp.format_header(NodeSet.fromlist(keys), reldepth)))
+        out.write("%s%s\n" % (" " * reldepth, msgline))
+        togh = nchildren != 1
+
+def display(tree, disp, gather, tree_mode):
     """nicely display MsgTree instance `tree' content according to
     `disp' Display object and `gather' boolean flag"""
+    out = sys.stdout
     try:
-        if gather:
-            # lambda to create a NodeSet from keys list returned by walk()
-            ns_getter = lambda x: NodeSet.fromlist(x[1])
-            for nodeset in sorted(imap(ns_getter, tree.walk()),
-                                  cmp=nodeset_cmp):
-                disp.print_gather(nodeset, tree[nodeset[0]])
+        if tree_mode:
+            display_tree(tree, disp, out)
         else:
-            # nodes are automagically sorted by NodeSet
-            for node in NodeSet.fromlist(tree.keys()):
-                disp.print_gather(node, tree[node])
+            if gather:
+                # lambda to create a NodeSet from keys list returned by walk()
+                ns_getter = lambda x: NodeSet.fromlist(x[1])
+                for nodeset in sorted(imap(ns_getter, tree.walk()),
+                                      cmp=nodeset_cmp):
+                    disp.print_gather(nodeset, tree[nodeset[0]])
+            else:
+                # nodes are automagically sorted by NodeSet
+                for node in NodeSet.fromlist(tree.keys()):
+                    disp.print_gather(node, tree[node])
     finally:
-        sys.stdout.flush()
+        out.flush()
 
 def clubak():
     """script subroutine"""
@@ -74,11 +100,12 @@ def clubak():
     # Argument management
     parser = OptionParser("%prog [options]")
     parser.install_display_options(separator_option=True,
-                                   dshbak_compat=True)
+                                   dshbak_compat=True,
+                                   msgtree_trace=True)
     options = parser.parse_args()[0]
 
     # Create new message tree
-    tree = MsgTree()
+    tree = MsgTree(trace=options.tree_mode)
 
     # Feed the tree from standard input lines
     for line in sys.stdin:
@@ -89,25 +116,26 @@ def clubak():
             if not node:
                 raise ValueError("no node found")
             tree.add(node, content)
-        except ValueError, e:
-            raise ValueError("%s (\"%s\")" % (e, linestripped))
+        except ValueError, ex:
+            raise ValueError("%s (\"%s\")" % (ex, linestripped))
 
     if options.debug:
+        STD_GROUP_RESOLVER.set_verbosity(1)
         print >> sys.stderr, "clubak: line_mode=%s gather=%s tree_depth=%d" % \
             (bool(options.line_mode), bool(options.gather), tree._depth())
 
     # Display results
     disp = Display(options)
-    display(tree, disp, options.gather or disp.regroup)
+    display(tree, disp, options.gather or disp.regroup, options.tree_mode)
 
 def main():
     """main script function"""
     try:
         clubak()
-    except GENERIC_ERRORS, e:
-        sys.exit(handle_generic_error(e))
-    except ValueError, e:
-        print >> sys.stderr, "%s:" % sys.argv[0], e
+    except GENERIC_ERRORS, ex:
+        sys.exit(handle_generic_error(ex))
+    except ValueError, ex:
+        print >> sys.stderr, "%s:" % sys.argv[0], ex
         sys.exit(1)
 
     sys.exit(0)
